src/pages/ru/v1.10.0/sdk/event.mdx
Этот метод позволяет отчитаться о «функциональном событии». С помощью функциональных событий вы можете сигнализировать моменты в сеансе пользователя, которые имеют релевантность с точки зрения функциональности, и которые по умолчанию наш трекер не может обнаружить и пометить самостоятельно.
Например, добавление товара в корзину. Хотя наш трекер будет иметь возможность записать это действие, он не сможет пометить его как релевантное событие в таймлайне вашего сеанса.
Однако, благодаря этому методу вы можете сделать это вручную.

<Aside type="tip">
  У нас также есть подробное руководство по отправке пользовательских событий, вы можете посмотреть его [здесь](/tutorials/custom-events).
</Aside>

См. [пользовательские события](/installation/custom-events#functionalevents) для получения дополнительной информации.

## Подпись


```js 
event(key: string, payload?: any, issue?: boolean): void
```

