src/pages/ru/v1.12.0/sdk/event.mdx
Заголовок: «JavaScript SDK - метод события»
MetaTitle: «JavaScript SDK - метод события»
MetaDescription: «Детали о методе события из SDK OpenReplay»

Этот метод позволяет отчитываться о «функциональном событии». С помощью функциональных событий вы можете сигнализировать моменты в сеансе пользователя, которые имеют функциональное значение и которые по умолчанию наш трекер не может обнаружить и пометить самостоятельно.
Пример функционального события - добавление товара в корзину пользователем. Хотя наш трекер сможет записать это действие, он не сможет пометить его как соответствующее событие в таймлайне вашего сеанса.
Однако, благодаря этому методу вы можете сделать это вручную.

<Aside type="tip">
  У нас также есть подробное руководство по отправке пользовательских событий, вы можете посмотреть его [здесь] ( / tutorials / custom-events).
</Aside>

См. [пользовательские события] ( / installation / custom-events # functionalevents) для получения дополнительной информации.

## Подпись


```js 
event(key: string, payload?: any, issue?: boolean): void
```

